Add support of DateRange field - Rename EntityReference into EntityReferenceField

--- a/field_manager.services.yml
+++ b/field_manager.services.yml
@@ -3,8 +3,13 @@ services:
   field_adapter.entity_reference:
     class: Drupal\field_manager\Adapter\FieldAdapter\EntityReferenceAdapter
     autowire: true
+  field_adapter.date_range:
+    class: Drupal\field_manager\Adapter\FieldAdapter\DateRangeAdapter
+    autowire: true
 
   #Manager
   field_manager:
     class: Drupal\field_manager\Service\FieldManager
-    arguments: ['@field_adapter.entity_reference']
+    arguments: [
+      '@field_adapter.entity_reference',
+      '@field_adapter.date_range']
